Add WebSocket